add bi component

--- a/src/app/modules/bi/components/layout/layout.html
+++ b/src/app/modules/bi/components/layout/layout.html
@@ -4,6 +4,8 @@
             <nav>
                 <ul>
                     <li><a title="Data Sources" routerLink="/bi/sources">Data Sources</a></li>
+                    <li><a title="Reports" routerLink="/bi/reports">Reports</a></li>
+                    <li><a title="New Report" routerLink="/bi/reports/new">New Report</a></li>
                 </ul>
             </nav>
         </mat-sidenav>
