add nav links to bi

--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -37,6 +37,7 @@
                         <ul>
                             <li><a title="Dashboard" routerLink="/bi/dashboard">Dashboard</a></li>
                             <li><a title="Data Sources" routerLink="/bi/sources">Data Sources</a></li>
+                            <li><a title="Reports" routerLink="/bi/reports">Reports</a></li>
                         </ul>
                     </nav>
                 </mat-expansion-panel>
