--- a/src/app/modules/inventory/components/warehouses/warehouses.html
+++ b/src/app/modules/inventory/components/warehouses/warehouses.html
@@ -7,7 +7,29 @@
             <div class="wrapper form-wrapper">
                 <form id="form_warehouses" class="form-warehouses" [formGroup]="component.form_warehouses">
                     <div class="wrapper">
-
+                        <mat-toolbar>
+                            <a id="a_warehouse_new" class="btn btn-warehouse-new" routerLink="/inv/warehouses/new" mat-icon-button>
+                                <mat-icon>new_warehouse</mat-icon>
+                            </a>
+                            <span>|</span>
+                            <button type="button" class="btn btn-set-active" title="Set Active" (click)="set_active()">
+                                <mat-icon>checked_box</mat-icon>
+                            </button>
+                            <button type="button" class="btn btn-set-active" title="Set Inactive" (click)="set_inactive()">
+                                <mat-icon>unchecked_box</mat-icon>
+                            </button>
+                            <span>|</span>
+                            <mat-form-field appearance="outline">
+                                <mat-label>Search</mat-label>
+                                <input type="search" id="filter" name="filter" class="input-filter" matInput />
+                                <button type="button" id="search" name="search" class="btn btn-search" mat-icon-button matSuffix>
+                                    <mat-icon>search</mat-icon>
+                                </button>
+                                <button type="button" id="reset" name="reset" class="btn btn-reset" mat-icon-button matSuffix>
+                                    <mat-icon>close_small</mat-icon>
+                                </button>
+                            </mat-form-field>
+                        </mat-toolbar>
                     </div><!-- wrapper -->
                     <div class="results">
                         <table id="tbl_warehouses">
