--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -23,8 +23,9 @@
                     <nav>
                         <ul>
                             <li><a title="Dashboard" routerLink="/inv/dashboard">Dashboard</a></li>
-                            <li><a title="Warehouses" routerLink="/inv/warehouses">Tenants</a></li>
-                            <li><a title="Items" routerLink="/inv/items">Items</a></li>
+                            <li><a title="Warehouses" routerLink="/inv/warehouses/list">Warehouses</a></li>
+                            <li><a title="Locations" routerLink="/inv/locations/list">Locations</a></li>
+                            <li><a title="Items" routerLink="/inv/items/list">Items</a></li>
                         </ul>
                     </nav>
                 </mat-expansion-panel>
