--- a/src/app/modules/inventory/components/layout/layout.html
+++ b/src/app/modules/inventory/components/layout/layout.html
@@ -14,7 +14,7 @@
         </mat-sidenav>
         <mat-sidenav-content>
             <button type="button" mat-icon-button (click)="toggle_start_sidenav()">
-                <mat-icon>chevron_forward</mat-icon>
+                <mat-icon fontSet="material-symbols-rounded">chevron_forward</mat-icon>
             </button>
             <router-outlet />
         </mat-sidenav-content>
