--- a/src/app/modules/inventory/components/warehouse/warehouse.html
+++ b/src/app/modules/inventory/components/warehouse/warehouse.html
@@ -1,64 +1,67 @@
 <div class="component component-inv-warehouse">
-    <div class="wrapper form-wrapper">
-        <form id="form_warehouse" class="form-warehouse" [formGroup]="component.form_warehouse">
-            <div class="wrapper">
-                <mat-toolbar>
-                    <button type="button" id="btn_warehouse_save" class="btn btn-warehouse-save" title="Save" mat-icon-button>
-                        <mat-icon>save</mat-icon>
-                    </button>
-                </mat-toolbar>
+    <mat-sidenav-container>
+        <mat-sidenav #nav_end_inv mode="over" position="end" disableClose="true">
+            <app-country-selector></app-country-selector>
+        </mat-sidenav>
+        <mat-sidenav-content>
+            <div class="wrapper form-wrapper">
+                <form id="form_warehouse" class="form-warehouse" [formGroup]="component.form_warehouse" (submit)="save()">
+                    <div class="wrapper">
+                        <mat-toolbar>
+                            <button type="submit" id="btn_warehouse_save" class="btn btn-warehouse-save" title="Save" mat-icon-button>
+                                <mat-icon>save</mat-icon>
+                            </button>
+                        </mat-toolbar>
+                    </div><!-- .wrapper -->
+                    <fieldset>
+                        <legend>General Information</legend>
+                        <input type="hidden" id="warehouse_id" name="warehouse_id" formControlName="warehouse_id" />
+                        <div class="field">
+                            <mat-form-field appearance="outline">
+                                <mat-label>Name</mat-label>
+                                <input type="text" id="name" name="name" class="field field-name" matInput formControlName="name" />
+                            </mat-form-field>
+                        </div><!-- .field -->
+                        <div class="field">
+                            <mat-form-field appearance="outline">
+                                <mat-label>Description</mat-label>
+                                <textarea id="description" name="description" class="field field-description" matInput formControlName="description"></textarea>
+                            </mat-form-field>
+                        </div><!-- .field -->
+                    </fieldset>
+                    <fieldset formGroupName="address">
+                        <legend>Address</legend>
+                        <input type="hidden" id="country_id" name="country_id" formControlName="country_id" />
+                        <div class="field">
+                            <mat-form-field appearance="outline">
+                                <mat-label>Street</mat-label>
+                                <input type="text" id="street" name="street" class="field field-street" matInput formControlName="street" />
+                            </mat-form-field>
+                        </div><!-- .field -->
+                        <div class="field">
+                            <mat-form-field appearance="outline">
+                                <mat-label>City</mat-label>
+                                <input type="text" id="city" name="city" class="field field-city" matInput formControlName="city" />
+                            </mat-form-field>
+                        </div><!-- .field -->
+                        <div class="field">
+                            <mat-form-field appearance="outline">
+                                <mat-label>State</mat-label>
+                                <input type="text" id="state" name="state" class="field field-state" matInput formControlName="state" />
+                            </mat-form-field>
+                        </div><!-- .field -->
+                        <div class="field">
+                            <mat-form-field appearance="outline">
+                                <mat-label>ZIP</mat-label>
+                                <input type="text" id="zip" name="zip" class="field field-zip" matInput formControlName="zip" />
+                            </mat-form-field>
+                        </div><!-- .field -->
+                        <button type="button" id="btn_country_selector" class="btn btn-country-selector" title="Select Country" matFab extended (click)="select_country()">
+                            <mat-icon fontSet="material-symbols-rounded">country</mat-icon>Select Country
+                        </button>
+                    </fieldset>
+                </form>
             </div><!-- .wrapper -->
-            <fieldset>
-                <legend>General Information</legend>
-                <div class="field">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Name</mat-label>
-                        <input type="text" id="name" name="name" class="field field-name" matInput formControlName="name" />
-                    </mat-form-field>
-                </div><!-- .field -->
-                <div class="field">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Description</mat-label>
-                        <textarea id="description" name="description" class="field field-description" matInput formControlName="description"></textarea>
-                    </mat-form-field>
-                </div><!-- .field -->
-            </fieldset>
-            <fieldset>
-                <legend>Address</legend>
-                <div class="field">
-                    <mat-form-field>
-                        <mat-label>Street</mat-label>
-                        <input type="text" id="street" name="street" class="field field-street" matInput formControlName="street" />
-                        <mat-hint>Block, Lot and street</mat-hint>
-                    </mat-form-field>
-                </div><!-- .field -->
-                <div class="field">
-                    <mat-form-field>
-                        <mat-label>City</mat-label>
-                        <input type="text" id="city" name="city" class="field field-city" matInput formControlName="city" />
-                    </mat-form-field>
-                </div><!-- .field -->
-                <div class="field">
-                    <mat-form-field>
-                        <mat-label>State</mat-label>
-                        <input type="text" id="state" name="state" class="field field-state" matInput formControlName="state" />
-                    </mat-form-field>
-                </div><!-- .field -->
-                <div class="field">
-                    <mat-form-field>
-                        <mat-label>ZIP code</mat-label>
-                        <input type="text" id="zip" name="zip" class="field field-zip" matInput formControlName="zip" />
-                    </mat-form-field>
-                </div><!-- .field -->
-                <div class="field">
-                    <mat-form-field>
-                        <mat-label>Country</mat-label>
-                        <select id="country" name="country" class="field field-country" matInput formControlName="country_id">
-                            
-                        </select>
-                    </mat-form-field>
-                </div><!-- .field -->
-            </fieldset>
-        </form>
-    </div><!-- .wrapper -->
+        </mat-sidenav-content>
+    </mat-sidenav-container>
 </div><!-- .component -->
