transition to signals form

--- a/src/app/modules/country-selector/components/country-selector/country-selector.html
+++ b/src/app/modules/country-selector/components/country-selector/country-selector.html
@@ -1,73 +1,5 @@
 <div class="component component-country-selector">
-    <div class="wrapper form-wrapper">
-        <form id="country_form" class="form-country-selector" method="post" action="" [formGroup]="components.formCountries">
-            <mat-card>
-                <mat-card-header>
-                    <mat-card-title>Country Selector</mat-card-title>
-                    <mat-card-subtitle>Select a country</mat-card-subtitle>
-                </mat-card-header>
-                <mat-card-content>
-                    <div class="filter">
-                        <mat-form-field appearance="outline">
-                            <mat-label>Search</mat-label>
-                            <input type="search" id="filter" name="filter" placeholder="Search" matInput formControlName="filter" />
-                            <button type="button" id="btn_search" name="btn_search" class="btn btn-search" title="Search" (click)="search()" mat-icon-button matSuffix>
-                                <mat-icon fontSet="material-symbols-rounded">search</mat-icon>
-                            </button>
-                            <button type="button" id="btn_reset" name="btn_reset" class="btn btn-reset" title="Reset" (click)="reset()" mat-icon-button matSuffix>
-                                <mat-icon fontSet="material-symbols-rounded">closed_small</mat-icon>
-                            </button>
-                        </mat-form-field>
-                    </div><!-- .filter -->
-                    <div class="matches">
-                        <table class="tbl-matches">
-                            <caption>Matches</caption>
-                            <thead>
-                                <tr>
-                                    <th></th>
-                                    <th>Name</th>
-                                    <th>Description</th>
-                                </tr>
-                            </thead>
-                            <tfoot>
-                            </tfoot>
-                            <tbody>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div><!-- .matches -->
-                    <div class="selected">
-                        <table class="tbl-selected">
-                            <caption>Selected</caption>
-                            <thead>
-                                <tr>
-                                    <th></th>
-                                    <th>Name</th>
-                                    <th>Description</th>
-                                </tr>
-                            </thead>
-                            <tfoot>
-                            </tfoot>
-                            <tbody>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div><!-- .selected -->
-                </mat-card-content>
-                <mat-card-actions>
-                    <button type="button" id="btn_select" class="btn btn-select" title="Select" (click)="select()" matFab extended>
-                        <mat-icon fontSet="material-symbols-rounded">check_circle</mat-icon>Select
-                    </button>
-                </mat-card-actions>
-            </mat-card>
-        </form>
-    </div><!-- .wrapper -->
+    <button type="button" id="btn_country_selector" class="btn btn-country-selector" (click)="show_dialog()" matFab extended>
+        <mat-icon>country</mat-icon>Select Country
+    </button>
 </div><!-- .component -->
