modify country selector

--- a/src/app/modules/country-selector/components/country-selector/country-selector.html
+++ b/src/app/modules/country-selector/components/country-selector/country-selector.html
@@ -1,5 +1,5 @@
 <div class="component component-country-selector">
     <button type="button" id="btn_country_selector" class="btn btn-country-selector" (click)="show_dialog()" matFab extended>
-        <mat-icon>country</mat-icon>Select Country
+        <mat-icon>flag</mat-icon><span>{{ components.country.name }}</span>
     </button>
 </div><!-- .component -->
